Fix gap between pictures

--- a/style/MainPageStyle.css
+++ b/style/MainPageStyle.css
@@ -15,6 +15,11 @@ body {
     margin: 100px auto auto auto;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+    vertical-align:bottom
+}
 .anchor {
     padding-top: 40px;
     margin-top: -40px;
